--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -78,3 +78,22 @@ h5 {
 	--toastBackground: #CC525F;
 	--toastBarBackground: #a6434e;
 }
+
+
+
+/* some scroll bar related css to make scroll in chat look nicer */
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: transparent;
+}
+
+::-webkit-scrollbar {
+	width: 6px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #657080;
+	border-radius: 5px;
+}
